@@ -898,6 +898,7 @@ $wgMessageStructure = array(
 		'prefs-watchlist-days-max',
 		'prefs-watchlist-edits',
 		'prefs-watchlist-edits-max',
+		'prefs-watchlist-token',
 		'prefs-misc', // continue checking if used from here on (r49916)
 		'prefs-resetpass',
 		'prefs-email',
@@ -918,6 +919,7 @@ $wgMessageStructure = array(
 		'recentchangesdays-max',
 		'recentchangescount',
 		'prefs-help-recentchangescount',
+		'prefs-help-watchlist-token',
 		'savedprefs',
 		'timezonelegend',
 		'localtime',
