@@ -160,6 +160,7 @@ this. Was used when mwEmbed was going to be an extension.
   when the Go button is pressed in addition to the main namespace.
 * (bug 19900) The "listgrouprights-key" message is now wrapped in a div with
   class "mw-listgrouprights-key"
+* (bug 471) Allow RSS feeds for watchlist, using an opt-in security token
 
 === Bug fixes in 1.16 ===
 
